[package]
name = "nimiq-dht"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Nimiq Dht verifier implementation."
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true

[badges]
travis-ci = { repository = "nimiq/core-rs", branch = "master" }
is-it-maintained-issue-resolution = { repository = "nimiq/core-rs" }
is-it-maintained-open-issues = { repository = "nimiq/core-rs" }
maintenance = { status = "experimental" }

[lints]
workspace = true

[dependencies]
log = { workspace = true }

nimiq-blockchain-interface = { workspace = true }
nimiq-blockchain-proxy = { workspace = true, features = ["full"] }
nimiq-keys = { workspace = true }
nimiq-log = { workspace = true, optional = true }
nimiq-network-libp2p = { workspace = true }
nimiq-serde = { workspace = true }
nimiq-utils = { workspace = true }
nimiq-validator-network = { workspace = true }

